# mindsdb

./: .deepsource.toml  .dockerignore  .env.example  .env.streamlined.template  .flake8  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .snyk  .spellcheck.yml  .travis.yml  .wordlist.txt  1.35.0  404.html  =  Applications_with_MindsDB.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY_CLEANUP_SUMMARY.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.streamlined  FINAL_COMPLETE_IMPLEMENTATION.md  FIX_IMPLEMENTATION.md  FIX_SUMMARY.md  INTEGRATION.md  LICENSE  Loan_data_with_error.csv  MANIFEST.in  Makefile  NLTK_PUNKT_TAB_ISSUE.md  Pipfile  PostgreSQL connection implmenation  README.bd.md  (+88 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.well-known/: x402.json
Config/: index.html
FunctionalInterface/: index.html
Getting Started with MindsDB on Digital Ocean/: index.html
GoogleColab/: index.html
InsideMindsDB/: index.html
JupyterNotebook/: index.html
Kubernetes/: README.md  deployment.yaml  ingress.yaml  mindsdb_config.json
PredictorInterface/: index.html
Study_Buddy/: Documentation  app.py
assets/: About Contribution and Swags
community/: index.html
concrete_strength_predictor/: ds.pickle  heavy_model_metadata.pickle  icp.pickle  light_model_metadata.pickle  lightwood_data
conda.recipe/: bld.bat  build.sh  meta.yaml
config/: __init__.py
connect/: index.html
contribute/: index.html
databases/: index.html
default_of_credit/: README.md  mindsdb_acc.py  train.csv
docker/: Dockerfile.template  README.md  all-in-one.yaml  beta  build.py  db_handler.Dockerfile  db_handler.uffizzi.Dockerfile  docker-bake.hcl  docker-compose-ci.yml  docker-compose-cloud.yml  docker-compose-executor.yml  docker-compose-old-manner.yml  docker-compose-testing.yml  docker-compose.yml  docker-compose_pg.yml  dockerfile_beta.template  dockerfile_release.template  executor.Dockerfile  handler_discovery.Dockerfile  mindsdb.Dockerfile  mindsdb_config.beta.json  mindsdb_config.release.json  mindsdb_launcher.sh  ml_handler.Dockerfile  ml_handler.uffizzi.Dockerfile  nginx-compose.yml  release  setup_cloud.sh
docs/: .gitignore  AGENT_SQL_GUIDELINES.md  Config.md  DataSources.md  Docs_Manual_QA.md  FAQ.md  GoogleColab.md  InsideMindsDB.md  Installing.md  README.md  README_HIN.md  README_KOR.md  README_ZH.md  UsingMindsDB.md  a2a_authentication.md  ai-integrations.mdx  ai_workflow.mdx  applications_showcase.mdx  automation.mdx  callbacks.mdx  colab.md  community.mdx  conf.py  contribute.mdx  data-integrations.mdx  data-sources-overview.mdx  data_sources.mdx  docs-rules.mdx  docs.json  generative-ai-tables.mdx  getting-started.mdx  homepage.mdx  house_sales_tutorial_test.mdx  (+34 more)
docs-v2/: community.mdx  contribute.mdx  docs-rules.mdx  getting-started-with-mindsdb-on-digital-ocean.mdx  info.mdx  mint.json  quickstart.mdx  tutorials.mdx  what-is-mindsdb.mdx
mindsdb hacktoberfest/use-cases/ai-helpdesk-platform/: README.md  app.py  notebook.ipynb  pyproject.toml  setup.py
mindsdb hacktoberfest/use-cases/ai-helpdesk-platform/core/: agent_ops.py  json_store.py  kb_ops.py
mindsdb hacktoberfest/use-cases/ai-helpdesk-platform/ui/: admin_dashboard.py  admin_search_kb.py  admin_tickets.py  user_chat_ticket.py  user_my_tickets.py  user_submit_ticket.py
mindsdb hacktoberfest/use-cases/enterprise-search/: .editorconfig  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  agent.py  docker-compose.yml  langgraph.json  pyproject.toml  server.py  server_langgraph.py  setup.py
mindsdb hacktoberfest/use-cases/enterprise-search/integrations/: __init__.py  confluence_client.py  jira_client.py  zendesk_client.py
mindsdb hacktoberfest/use-cases/enterprise-search/models/: __init__.py  common.py  confluence_page.py  jira_issue.py  zendesk_ticket.py
mindsdb hacktoberfest/use-cases/enterprise-search/tests/: test_evaluation.py  test_hybrid_search.py  test_with_real_data.py
mindsdb hacktoberfest/use-cases/enterprise-search/tests/data/: confluence.csv  jira.csv  jira.json  zendesk.csv  zendesk.json
mindsdb hacktoberfest/use-cases/enterprise-search/tools/: __init__.py  search.py
mindsdb hacktoberfest/use-cases/enterprise-search/utils/: create_test_tables.py  evaluate_kb.py  populate_data.py  setup_datasource.py  setup_jobs.py  setup_kb.py
mindsdb hacktoberfest/use-cases/semantic-academic-search-engine/backend/: .env.example  README.md  cron_job.py  main.py  pyproject.toml  startup.py  utils.py
mindsdb hacktoberfest/use-cases/semantic-academic-search-engine/backend/api/: __init__.py  models.py  routes.py
mindsdb hacktoberfest/use-cases/semantic-academic-search-engine/backend/config/: __init__.py  config.yaml  loader.py
mindsdb hacktoberfest/use-cases/semantic-academic-search-engine/backend/data/: sample_data.json
mindsdb hacktoberfest/use-cases/semantic-academic-search-engine/backend/mindsdb/: __init__.py  client.py
mindsdb/api/a2a/: README.md  __init__.py  __main__.py  a2a_client.py  agent.py  constants.py  pyproject.toml  run_a2a.py  task_manager.py  utils.py
mindsdb/api/a2a/common/: types.py
mindsdb/api/a2a/common/client/: card_resolver.py  client.py
mindsdb/api/a2a/common/server/: __init__.py  auth_middleware.py  server.py  task_manager.py  utils.py
mindsdb/api/a2a/common/utils/: in_memory_cache.py  push_notification_auth.py
mindsdb/api/a2a/mindsdb/: __main__.py  agent.py  pyproject.toml  task_manager.py
mindsdb/integrations/handlers/lightwood_handler/: Manual_QA.md  README.md  __about__.py  __init__.py  functions.py  lightwood_handler.py  pyproject.toml  requirements.txt  requirements_standalone.txt  setup.py  utils.py
mindsdb/integrations/handlers/lightwood_handler/lightwood_handler/: __init__.py  functions.py  join_utils.py  learn_process.py  lightwood_handler.py  ts_utils.py  utils.py
mindsdb/integrations/handlers/lightwood_handler/tests/: test_lightwood_handler.py
(+6901 files in other folders)
