[build-system]
# @TODO: We should figure out version limitations for these
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mindsdb"
requires-python = ">=3.10,<3.14"
description = "AI Query Engine for federated data"
dynamic = ["readme", "license", "authors", "classifiers", "version"]

# ── Core dependencies ─────────────────────────────────────────────────────────
# Only DIRECT dependencies — transitive deps are resolved by uv lock.
# To add a dep:     uv add <package>
# To remove a dep:  uv remove <package>
# To upgrade a dep: uv lock --upgrade-package <package>
# To export:        uv export --format requirements-txt --no-hashes > requirements.txt

dependencies = [
    # --- Packaging ---
    "packaging",
    # --- Web framework ---
    "werkzeug == 3.1.6",
    "flask ~= 3.1",
    "flask-restx >= 1.3.0, < 2.0.0",
    "uvicorn >= 0.30.0, < 1.0.0",
    "flask-compress >= 1.0.0",
    "a2wsgi ~= 1.10.10",
    "starlette >= 0.49.1",
    "sse-starlette ~= 2.3",
    "python-multipart >= 0.0.22",
    # --- Data processing ---
    "pandas >= 2.2.3, < 3.0.0",
    "numpy ~= 2.0",
    "pyarrow <= 19.0.0",
    "dill ~= 0.3",
    "dateparser ~= 1.2",
    "pytz",
    "python-dateutil",
    # --- Database ---
    "sqlalchemy >= 2.0.0, < 3.0.0",
    "alembic >= 1.3.3",
    "psycopg[binary]",
    "redis >= 5.0.0, < 6.0.0",
    "walrus ~= 0.9",
    "duckdb == 1.3.0; sys_platform == 'win32'",
    "duckdb ~= 1.3.2; sys_platform != 'win32'",
    # --- Cloud / storage ---
    "boto3 >= 1.34.131",
    "appdirs >= 1.0.0",
    # --- HTTP / API ---
    "requests ~= 2.32",
    # --- Auth / security ---
    "cryptography >= 42.0.0",
    "pyjwt ~= 2.10",
    # --- Validation / serialization ---
    "pydantic ~= 2.12",
    "typing-extensions >= 4.12",
    "orjson ~= 3.11",
    # --- MindsDB core ---
    "mindsdb-sql-parser ~= 0.13.8",
    "sly == 0.5",  # undeclared dep of mindsdb-sql-parser 0.13.8; remove once upstream fixes metadata
    "mind-castle >= 0.4.9",
    "psutil ~= 7.0",
    # --- File handling ---
    "charset-normalizer >= 3.4",
    "pymupdf ~= 1.25",
    "filetype",
    "openpyxl",
    "aipdf ~= 0.0.7",
    "bs4",
    # --- Observability ---
    "prometheus-client ~= 0.20",
    "sentry-sdk[flask] ~= 2.14",
    # --- Misc ---
    "pyaml ~= 23.12",
    "xlrd>=2.0.2",
    "pydantic-ai >= 1.66.0, < 2.0.0",
]

[project.optional-dependencies]

# ── System extras ─────────────────────────────────────────────────────────────
# Regenerate all requirements files: python scripts/generate_requirements.py
#
# Agent stack
agents = [
    "openai >= 2.9.0, < 3.0.0",

    # Required for KB
    "mindsdb-evaluator == 0.0.21",
    "mcp >= 1.25.0",

    # A2A requirements
    "httpx ~= 0.28",
    "jwcrypto ~= 1.5",
   
]

# Knowledge Base
kb = [
    "google-auth >= 2.0.0",
    "google-genai >= 1.0.0",
]

# Opentelemetry
opentelemetry = [
    "opentelemetry-api >= 1.27",
    "opentelemetry-sdk >= 1.27",
    "opentelemetry-exporter-otlp >= 1.27",
    "opentelemetry-instrumentation-requests >= 0.48b0",
    "opentelemetry-instrumentation-flask >= 0.48b0",
    "opentelemetry-distro >= 0.48b0",
]

langfuse = [
    "langfuse ~= 3.14",
]

# ── Handler extras ─────────────────────────────────────────────────────────────
# Source of truth for both:
#   pip install '.[handler_name]'
#   mindsdb/integrations/handlers/<name>_handler/requirements.txt
#
# Adding a new handler:
#   1. Add the extra below (empty list [] if the handler has no deps beyond core)
#   2. Run: python scripts/generate_requirements.py

postgres = [
]

snowflake = [
    "snowflake-connector-python >= 3.10.0",
]

oracle = [
    "oracledb >= 2.0.0",
]

bigquery = [
    "google-cloud-bigquery >= 3.0.0",
]

databricks = [
    "databricks-sql-connector >= 3.0.0",
]

timescaledb = [
]

salesforce = [
    "salesforce-api == 0.1.45",
]

hubspot = [
    "hubspot-api-client >= 8.0.0",
]

netsuite = [
    # Uses requests from core dependencies — no additional deps required
]

mysql = [
    "mysql-connector-python >= 9.1.0",
]

pgvector = [
    "pgvector ~= 0.3",
    "psycopg2-binary >= 2.9.0",
]

duckdb_faiss = [
    "faiss-cpu >= 1.13.0",
]

huggingface = [
    "transformers >= 4.42.4",
]

web = [
    "html2text>=2025.4.15",
]

#  uv configuration
[tool.uv]
# Strict environment sync (CI/production — installs exactly what's in uv.lock):
#   uv sync --locked --extra agents --extra kb
#
# Additive install (dev — adds an extra WITHOUT removing packages from other extras):
#   uv pip install -e ".[agents]"
#   uv pip install -e ".[kb]"
#
# Use `uv lock --check` in CI to verify uv.lock matches pyproject.toml.
#
# To regenerate requirements files after changing extras or dependency-groups:
#   python scripts/generate_requirements.py

#  PEP 735 — dev/test toolchains (not extras). `uv sync --group dev` still installs [project.dependencies].
[dependency-groups]
dev = [
    "pre-commit >= 2.16.0",
    "watchfiles ~= 0.19",
    "setuptools ~= 78.1",
    "wheel",
    "deptry ~= 0.25.1",
    "twine",
    "importlib-metadata ~= 7.2",
    "ruff ~= 0.11",
]
test = [
    "scipy ~= 1.15.3",
    "docker >= 5.0.3",
    "openai >= 2.9.0, < 3.0.0",
    "pytest >= 8.3.5, < 9.0.0",
    "pytest-subtests",
    "pytest-xdist",
    "pytest-cov",
    "pytest-json-report ~= 1.5",
    "pytest-metadata ~= 3.1",
    "python-dotenv ~= 1.1",
    "responses",
    "coveralls",
    "locust",
    "ollama >= 0.1.7",
    "anthropic >= 0.21.3",
    "langchain-google-genai >= 2.0.0",
    "filelock ~= 3.20",
    "mysql-connector-python ~= 9.1",
    "pymongo ~= 4.8",
    "mindsdb-sdk >= 3.5.0",
]

[tool.pytest.ini_options]
norecursedirs = ["tests/unused", ".venv", ".mindsdb", "build", "dist"]

#  Deptry
[tool.deptry]
known_first_party = ["mindsdb"]
ignore_notebooks = true
extend_exclude = [
    "\\.venv",
    "build",
    "tests/unused",
    "mindsdb/integrations/handlers/.*_handler",
]

[tool.deptry.per_rule_ignores]
# Imported in code but not listed as direct deps: optional stacks, auth backends, or transitive imports.
DEP001 = [
    "torch",  # optional: torch.multiprocessing when PyTorch is installed; else stdlib multiprocessing
    "dataprep_ml",  # optional: HTTP dataset analysis (dataprep_ml.insights); not required for core server
    "sklearn",  # optional: scikit-learn metrics for Nixtla/time-series accuracy helpers (r2_score, etc.)
    "hierarchicalforecast",  # optional: hierarchical TS reconciliation; guarded by try/except in time_series_utils
    "google_auth_oauthlib",  # optional: Google OAuth web flow (google_user_oauth_utilities)
    "msal",  # optional: Microsoft / MS Graph token flows (ms_graph_api_auth_utilities)
    "aiobotocore",  # optional: async AWS client for Bedrock KB rerank (bedrock provider)
    "botocore",  # S3 paths only: ClientError from botocore.exceptions; pulled in transitively via boto3
]
# DEP002 = declared in pyproject but “unused” in the analyzed tree. Handler-only deps need this because
# core deptry excludes mindsdb/integrations/handlers/. Import↔PyPI name mismatches use package_module_name_map instead.
DEP002 = [
    "openpyxl",
    "xlrd",
]

[tool.deptry.package_module_name_map]
# Import names that differ from PyPI distribution names (deptry uses this to match imports ↔ deps).
"pyjwt" = ["jwt"]
"pymupdf" = ["fitz"]
"python-multipart" = ["multipart"]
"python-dateutil" = ["dateutil"]
"google-auth" = ["google"]
"google-genai" = ["google"]
"google-cloud-bigquery" = ["google"]
"opentelemetry-api" = ["opentelemetry"]
"opentelemetry-sdk" = ["opentelemetry"]
"opentelemetry-distro" = ["opentelemetry"]
"opentelemetry-exporter-otlp" = ["opentelemetry"]
"opentelemetry-instrumentation-flask" = ["opentelemetry"]
"opentelemetry-instrumentation-requests" = ["opentelemetry"]
"pyaml" = ["yaml"]


#  Ruff
[tool.ruff]
exclude = [
  ".venv",
  "build",
  "tests/unused",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E501",     # Line too long
    "C901",     # Function is too complex
    "E721",     # Do not compare types, use 'isinstance()'
]

[tool.ruff.lint.per-file-ignores]
"mindsdb/__main__.py" = ["E402"]
"mindsdb/api/http/start.py" = ["E402"]
"mindsdb/api/mysql/mysql_proxy/libs/constants/mysql.py" = ["E241"]
